changed 70s -> 250s for waiting hb;\n add range for random delay befor send pack of command;\n add Wait_HB_after_comm

--- a/valves.config
+++ b/valves.config
@@ -1,10 +1,18 @@
 
 [Devices]
-Valves = [00124b001d035fc2, 00124b001d035f83, 00124b001d036477]
-Cycles = 1000
+Valves = [00124b001d035fc2, 00124b001d035f83, 00124b001d036477, 00124b001d035f8d]
+Cycles = 100000
+Delay = [0, 0]
+Wait_HB_after_comm = 0
 
 [Connection]
 IP = 192.168.0.25
+
+
+# NOTE !!!
+#
+# Delay = [15, 3600]  -  set in seconds, for example, [15, 3600]
+# Wait_HB_after_comm = 0  -  if 0 - we waiting only node_sc_data, if 1 - we waiting node_sc_data or node_sc_heartbeat after sent a command
 
 
 
